@@ -128,9 +128,6 @@ class GenerateSitemap extends Maintenance {
 		$this->mDescription = "Creates a sitemap for the site";
 		$this->addOption( 'fspath', 'The file system path to save to, e.g. /tmp/sitemap' .
 									"\n\t\tdefaults to current directory", false, true );
-		$this->addOption( 'server', "The protocol and server name to use in URLs, e.g.\n" .
-									"\t\thttp://en.wikipedia.org. This is sometimes necessary because\n" .
-									"\t\tserver name detection may fail in command line scripts.", false, true );
 		$this->addOption( 'compress', 'Compress the sitemap files, can take value yes|no, default yes', false, true );
 	}
 
